--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <img src="https://images.unsplash.com/photo-1611930022073-b7a4ba5fcccd" alt="Brand">
       <img src="https://images.unsplash.com/photo-1598327105666-5b89351aff97" alt="Brand">
       <img src="https://images.unsplash.com/photo-1606813907291-d86efa9b94db" alt="Brand">
+      <img src="https://i.postimg.cc/SxDDVmwZ/CLEARANCE-Dresses-Women-2023-Casual-Vintage-Sexy-V-Neck-Short-Sleeve-Fashion-Summer-Retro-Pullover-S.avif" alt="Brand">
     </div>
   </section>
 
@@ -83,8 +84,9 @@
       </div>
 
       <div class="product">
-        <img src="https://i.postimg.cc/c1j4nZK1/images.jpg" alt="Shoes">
-        <h3>Sneakers</h3>
+        <img src="https://i.postimg.cc/c1j4nZK1/images.jpg" alt="Shoes and dresses">
+        <img src="https://i.postimg.cc/SxDDVmwZ/CLEARANCE-Dresses-Women-2023-Casual-Vintage-Sexy-V-Neck-Short-Sleeve-Fashion-Summer-Retro-Pullover-S.avif">
+        <h3>Sneakers dresses</h3>
         <p>₵600.00</p>
         <button>Add to Cart</button>
       </div>
